--- a/GraZaDuzoZaMalo/GraMonolitycznie/GraMonolitycznie.csproj
+++ b/GraZaDuzoZaMalo/GraMonolitycznie/GraMonolitycznie.csproj
@@ -4,14 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6A3D031E-ACFC-4D9C-A451-8B9CBB15C54A}</ProjectGuid>
+    <ProjectGuid>{63F8476A-DFE1-4F8F-9E25-F839E7936382}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>GraMonolitycznie</RootNamespace>
     <AssemblyName>GraMonolitycznie</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
